Create chracter done, app working

--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
                   class="btn btn-primary btn-md"
                   id="search-btn"
                 >
-                  <span class="fa fa-search"></span> Search Your Feelings. You
-                  know it to be true.
+                  <span class="fa fa-search"></span> Search the galaxy
                 </button>
               </div>
             </div>
