--- a/add.html
+++ b/add.html
@@ -31,6 +31,9 @@
             <span class="fa fa-eye"></span> All Characters
           </button></a
         >
+        <a href="/">
+          <button class="btn btn-primary btn-lg">Back to Search</button>
+        </a>
       </div>
       <div class="row">
         <div class="col-12">
@@ -76,6 +79,23 @@
       </div>
     </div>
 
-    <script type="text/javascript"></script>
+    <script type="text/javascript">
+      $("#add-btn").on("click", function (event) {
+        event.preventDefault();
+        var newCharacter = {
+          name: $("#name").val().trim(),
+          role: $("#role").val().trim(),
+          ago: $("#age").val().trim(),
+          forcePoints: $("#force-points").val().trim(),
+        };
+
+        console.log(newCharacter);
+
+        $.post("/api/characters", newCharacter).then(function (data) {
+          console.log("add.html", data);
+          alert("Character added");
+        });
+      });
+    </script>
   </body>
 </html>
